nav dropdown alignment nd mobileview spacing correction and nav size increased in big screens

--- a/css/style.css
+++ b/css/style.css
@@ -137,6 +137,7 @@ body{
   padding:5px;
 }
 
+
 /* HERO */
 .hero{
   padding:60px 0 40px;
@@ -537,7 +538,7 @@ body{
 /* Large Desktop (1200px+) */
 @media screen and (min-width: 1200px) {
   .container{
-    padding:0 40px;
+    padding:20px 20px;
   }
 }
 
@@ -620,6 +621,7 @@ body{
     width:100%;
     padding:12px 16px;
     text-align:left;
+    padding-left: 0;
   }
   
   .dropdown-content{
@@ -731,7 +733,7 @@ body{
   }
   
   .section{
-    padding:32px 0;
+    padding:10px 0;
   }
   
   .section-title{
